# Grayscale-ImageProcessor

./: CMakeLists.txt  README.md
app/: main.cpp
data/: example.pgm
include/: Image.hpp
src/: Image.cpp
